[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statusline-toolkit"
dynamic = ["version"]
description = "A small, dependency-free CLI for inspecting Claude Code's statusLine JSON payload, with currency conversion, cost tracking, and an HTML dashboard."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "gungunfebrianza" }]
keywords = ["claude-code", "statusline", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/gungunfebrianza/statusline-toolkit"
Changelog = "https://github.com/gungunfebrianza/statusline-toolkit/blob/main/CHANGELOG.md"

[project.scripts]
statusline-toolkit = "statusline_toolkit:main"

[tool.setuptools]
py-modules = ["statusline_toolkit"]

[tool.setuptools.dynamic]
version = { attr = "statusline_toolkit.__version__" }
